Issue #18776: atexit callbacks now display their full traceback when they raise an exception.